--- a/.github/workflows/update-flake.yml
+++ b/.github/workflows/update-flake.yml
@@ -100,7 +100,7 @@ jobs:
             _Automated PR by [update-flake-lock](https://github.com/DeterminateSystems/update-flake-lock)_
             
             ${{ github.event.inputs.test-mode == 'true' && '🧪 **TEST MODE**: Auto-merge disabled for testing' || '' }}
-          token: ${{ secrets.GH_TOKEN_FOR_UPDATES || github.token }}
+          token: ${{github.token}}
           # path-to-flake-dir: "." # Uncomment and set if your flake is not at repo root
         timeout-minutes: 10
 
@@ -167,13 +167,13 @@ jobs:
             gh pr merge "$PR_NUMBER" --auto --squash --delete-branch || {
               echo "⚠️ Auto-merge failed. Adding comment to PR..."
               gh pr comment "$PR_NUMBER" --body "⚠️ **Auto-merge could not be enabled**
-
-              Please check the following repository settings:
-              1. **Settings → General → Pull Requests**: \"Allow auto-merge\" must be enabled
-              2. **Settings → Actions → General**: \"Allow GitHub Actions to create and approve pull requests\" must be enabled
-              3. If using a custom token, ensure it has sufficient permissions
-
-              You can manually merge this PR once checks pass, or re-run the workflow after fixing settings."
+          
+          Please check the following repository settings:
+          1. **Settings → General → Pull Requests**: \"Allow auto-merge\" must be enabled  
+          2. **Settings → Actions → General**: \"Allow GitHub Actions to create and approve pull requests\" must be enabled
+          3. If using a custom token, ensure it has sufficient permissions
+          
+          You can manually merge this PR once checks pass, or re-run the workflow after fixing settings."
               exit 1
             }
             echo "✅ Auto-merge enabled successfully!"
